# quaker

./: .gitignore  Cargo.toml  assets.md  flake.nix  readme.md  run.sh
assets/: Base.fgd  crosshair.kra  game.entropy  inputs.json  misc.entropy  pickups.json  projectiles.json  readme.md  weapons.json
assets/maps/: Crate.map  Door.map  M1.map  Test.map  cubey.map  deathmatch_octothorp.map
assets/models/Enemies/DeadMan/: deadman.dae
assets/models/Enemies/GruntRifle/: GruntRifle.dae
assets/models/Enemies/Panzer/: Panzer.dae
assets/models/Gibs/: Gib03.mtl  GibDeadman.mtl
assets/models/Pickups/Ammo/: EnergyCell.mtl
assets/models/Pickups/Guns/: Bayonet.mtl  Revolver.mtl  SuperCoolGun.mtl
assets/models/Player/First Person/: Bayonet.glb  Dynamite.glb  Flamethrower.glb  NukeGun.glb  PumpShotgun.glb  RPG.glb  Revolver.glb  SmgBelter.glb  SuperCoolGun.glb  SuperShotgun.glb
assets/models/Player/First Person/Bayonet/: Bayonet.dae  Bayonet.gltf
assets/models/Player/First Person/Dynamite/: Dynamite.dae  Dynamite.gltf
assets/models/Player/First Person/Flamethrower/: Flamethrower.dae  Flamethrower.gltf  FlamethrowerIndicator.dae
assets/models/Player/First Person/NukeGun/: NukeGun.dae  NukeGun.gltf
assets/models/Player/First Person/PumpShotgun/: PumpShotgun.dae  PumpShotgun.gltf
assets/models/Player/First Person/RPG/: RPG.dae  RPG.gltf
assets/models/Player/First Person/Revolver/: Revolver.dae  Revolver.gltf
assets/models/Player/First Person/SMG/: SmgBelter.dae  SmgBelter.gltf
assets/models/Player/First Person/SuperCoolGun/: SuperCoolGun.dae  SuperCoolGun.gltf
assets/models/Player/First Person/SuperShotgun/: SuperShotgun.dae  SuperShotgun.gltf
assets/models/Player/MP/: MPDeadman.dae
assets/ui/: splash.kra
crates/faststr/: Cargo.toml  bin.rs
crates/faststr/src/: bin.rs  lib.rs
crates/input_derive/: Cargo.toml
crates/input_derive/src/: lib.rs
crates/integrity/: Cargo.toml  lib.rs
crates/macros/: Cargo.toml  lib.rs
crates/macros/src/: lib.rs
crates/map_parser/: Cargo.toml
crates/map_parser/src/: lib.rs  parser.rs  tokenizer.rs
crates/map_parser/tests/: 220.map  combined.map  paper.map  rotated.map  simple.map
crates/qwak/: Cargo.toml  bin.rs  lib.rs
crates/qwak_helper_types/: Cargo.toml  lib.rs
crates/qwak_macro/: lib.rs
crates/qwak_shared/: Cargo.toml  lib.rs
crates/randomgen/: Cargo.toml  main.rs
crates/randomgen/src/: main.rs
crates/resources/: Cargo.toml  data.rs  inputs.rs  lib.rs
extensions/: Cargo.toml  bin.rs  lib.rs
extensions/default/src/: lib.rs
extensions/qwak_macro/: Cargo.toml  lib.rs
extensions/qwak_shared/: Cargo.toml  lib.rs
qwaks/default/: Cargo.toml
qwaks/default/src/: lib.rs
research/: algo.kra  anims.md  assets.md
src/: main.rs  map_gen.rs  plugins.rs  queries.rs  qwak_host_functions.rs  try_steam.rs
src/entities/: data.rs  message.rs  mod.rs  pickup.rs
src/integrity/: mod.rs
src/mainmenu/: mod.rs
src/map_gen/: entities.rs  interactable.rs  mod.rs  plane.rs  poly.rs  texture_systems.rs  vertex.rs
src/map_gen/entities/: data.rs  mod.rs
src/net/: client.rs  lobby.rs  mod.rs  server.rs  steam.rs
src/particles/: bullet_hit.rs  demo.rs  mod.rs
src/player/: debug.rs  mod.rs  spawn.rs  update.rs
src/resources/: entropy.rs  inputs.rs  mod.rs  projectiles.rs
src/startup/: mod.rs
