workspace = { members = [ "crates/input_derive", "crates/macros","crates/map_parser", "crates/randomgen"] }
[package]
name = "quaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]        
bevy = { version = "0.15.0", features = ["bevy_gltf"] }#, features = ["dynamic_linking"]
map_parser = { path = "crates/map_parser" }
macros = { path = "crates/macros" }
input_derive = { path = "crates/input_derive" }
faststr = { path = "crates/faststr" }
bevy_rapier3d = { version = "0.28.0", features = ["parallel","debug-render-3d","simd-stable"] }
serde = "1.0.216"
serde_json = "1.0.134"
bevy_obj = { version = "0.15.0" } #, features = ["scene"] 
bevy-inspector-egui = "0.28.0"
bevy-scene-hook = { git = "https://github.com/AlephCubed/bevy-scene-hook.git" }
bevy_simple_text_input = "0.10.0"
bincode = "1.3.3"
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", features = ["steam"] }
renet_steam = { git = "https://github.com/lucaspoffo/renet.git", features = ["bevy"] }
steamworks = "0.11.0"
sha256 = { version = "1.5.0", default-features = false }
image = { version = "0.25.5", default-features = false }
bevy_hanabi = { version = "0.14.0", default-features = false, features = ["3d"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
